<resources>
    <string name="app_name">SQLiteStudent</string>
    <string name="name">姓名：</string>
    <string name="age">年龄：</string>
    <string name="gender">性别:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="number">编号</string>
    <string name="add">添加</string>
    <string name="search">查询</string>
    <string name="delete">删除</string>
    <string name="update">修改</string>
    <string name="add_chart">添加表单成功！</string>
    <string name="database_update">数据库升级！</string>
    <string name="add_database">添加数据库成功！</string>
    <string name="warning">警告</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="sure_to_delete_all">你确定要删除表内所有数据吗？</string>
    <string name="delete_success">删除成功！</string>
    <string name="update_success">更新成功！</string>
    <string name="add_success">添加成功！</string>
    <string name="add_student_id">添加成功，新学员学号是：%1$d</string>
</resources>
